Refactored log reading